[gd_scene format=3 uid="uid://1k0c1utudokr"]

[ext_resource type="Script" uid="uid://bri3rb8p8qge8" path="res://scenes/mobile_ui.gd" id="1_801x6"]
[ext_resource type="Texture2D" uid="uid://bivubwxjde2at" path="res://assets/sprites/ui/button_unselected.png" id="1_gavpe"]
[ext_resource type="Texture2D" uid="uid://brwoqqoa67b8i" path="res://assets/sprites/ui/button_selected.png" id="2_dww2o"]
[ext_resource type="Texture2D" uid="uid://ca2t7ns6220hf" path="res://assets/sprites/props/mano2.png" id="3_dww2o"]
[ext_resource type="Texture2D" uid="uid://br5bglpvs2al6" path="res://assets/sprites/props/mano3.png" id="4_ho8u3"]
[ext_resource type="FontFile" uid="uid://b7v3dl24ymbhe" path="res://assets/fonts/PixelifySans-Regular.ttf" id="5_npmr2"]

[node name="mobileUI" type="CanvasLayer" unique_id=145118504]
script = ExtResource("1_801x6")

[node name="mobileUI" type="Control" parent="." unique_id=1224489425]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="JumpButton" type="TouchScreenButton" parent="mobileUI" unique_id=1511110635]
position = Vector2(242, 130)
scale = Vector2(1.3749998, 1.3333331)
texture_normal = ExtResource("1_gavpe")
texture_pressed = ExtResource("2_dww2o")
action = "jump"
visibility_mode = 1

[node name="SwitchMaskButton" type="TouchScreenButton" parent="mobileUI" unique_id=1943147152]
position = Vector2(170.00002, 130)
scale = Vector2(1.385, 1.347)
texture_normal = ExtResource("1_gavpe")
texture_pressed = ExtResource("2_dww2o")
action = "next_mask"
visibility_mode = 1

[node name="MoveLeftButton" type="TouchScreenButton" parent="mobileUI" unique_id=869570454]
position = Vector2(1.9999998, 133)
scale = Vector2(1.1071429, 1.09375)
texture_normal = ExtResource("3_dww2o")
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="MoveRightButton" type="TouchScreenButton" parent="mobileUI" unique_id=619188146]
position = Vector2(73, 135)
texture_normal = ExtResource("4_ho8u3")
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="SwitchText" type="Label" parent="mobileUI" unique_id=612777132]
layout_mode = 0
offset_left = 190.0
offset_top = 157.0
offset_right = 250.0
offset_bottom = 173.0
theme_override_fonts/font = ExtResource("5_npmr2")
theme_override_font_sizes/font_size = 9
text = "SWITCH"

[node name="JumpText" type="Label" parent="mobileUI" unique_id=1477291295]
layout_mode = 0
offset_left = 267.0
offset_top = 157.0
offset_right = 327.0
offset_bottom = 173.0
theme_override_fonts/font = ExtResource("5_npmr2")
theme_override_font_sizes/font_size = 9
text = "JUMP"
